# list.h

./: LICENSE  README.md  meson.build
bench/: list_h_sort.c  meson.build  sort_size.h  std_list_sort.cpp
bench/src/: bench.h  bench_size.h  list_h_sort.c  main.c  std_list_sort.cpp
examples/: basic.c  example.c  meson.build
src/: list.h
test/: main.c  meson.build
